<resources>
    <string name="app_name" translatable="false">Quotation</string>
    <string name="bGetQuotations">GET QUOTATIONS</string>
    <string name="bFavourite">FAVOURITE QUOTATIONS</string>
    <string name="bAbout">ABOUT</string>

    <string name="aboutTitle">About</string>
    <string name="textAbout">Quotation Shake by   Alejandro Ávila Solera  alavso@upv.edu.es  Developed for DADM 2022</string>
    <string name="imageIcon">Image from Alejandro Ávila Solera</string>

    <string name="settingsTitle">Settings</string>
    <string name="textField1">Name that identifies the user</string>
    <string name="editText1">Enter your username</string>
    <string name="textField2">Get quotations in the selected language</string>
    <string name="textField3">Request quotations using the selected HTTP method</string>
    <string name="get">GET</string>

    <string name="favouriteTitle">Favourite quotations</string>
    <string name="authorInfo">Author info</string>

    <string name="getQuotationsTitle">Get quotations</string>
    <string name="tvInferiorDerecha">Sample author</string>
    <string name="name">Nameless One</string>
    <string name="bSettings">SETTINGS</string>
    <string name="post">POST</string>
    <string name="hello">Hello %1s! \nPress Refresh to get a new quotation</string>
    <string name="sampleQuotation">Sample quotation %1$d</string>
    <string name="sampleAuthor">Sample author %1$d</string>

    <string name="languageArrayEnglish">English</string>
    <string name="languageArrayRussian">Russian</string>

    <string name="deleteItem">Are you sure that you want to delete this quotation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add">Add</string>
    <string name="new_quote">Refresh</string>
    <string name="remove_all">Clear All</string>

    <string name="delete_all_quotations">Are you sure that you want to delete ALL your favourite quotations</string>

    <string name="titleConf">Configuration</string>
    <string name="username">Username</string>
    <string name="user_name_hint">Enter your username</string>
    <string name="summary">This name identifies the user within the app</string>
    <string name="paramsService">Parameters</string>
    <string name="languages">Quotations language</string>
    <string name="htpp_requests">HTTP Requests</string>
</resources>